# clipboard-substitutor

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  deny.toml  dist-workspace.toml  flake.nix  justfile  renovate.json  shell.nix
.github/: renovate.json
.github/workflows/: release.yml  test.yml
src/: clipboard.rs  config.rs  logging.rs  main.rs  test.rs
