[package]
name = "clipboard-substitutor"
version = "0.7.7"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to monitor clipboard changes and perform operations based on the contents"
repository = "https://github.com/msfjarvis/clipboard-substitutor"
homepage = "https://github.com/msfjarvis/clipboard-substitutor"
license = "MIT/Apache-2.0"
publish = false
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.79"
argv = "0.1.11"
copypasta = { version = "0.10.0", default-features = false, features = ["x11"] }
dirs = "5.0.1"
regex = "1.10.3"
serde = "1.0.195"
serde_derive = "1.0.195"
toml = "0.8.8"
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]
