[package]
name = "clipboard-substitutor"
version = "0.7.8"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to monitor clipboard changes and perform operations based on the contents"
repository = "https://github.com/msfjarvis/clipboard-substitutor"
homepage = "https://github.com/msfjarvis/clipboard-substitutor"
license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.82"
argv = "0.1.11"
copypasta = { version = "0.10.1", default-features = false, features = ["x11"] }
dirs = "5.0.1"
regex = "1.10.4"
serde = "1.0.200"
serde_derive = "1.0.200"
toml = "0.8.12"
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
