[package]
name = "clipboard-substitutor"
version = "0.7.8"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to monitor clipboard changes and perform operations based on the contents"
repository = "https://github.com/msfjarvis/clipboard-substitutor"
homepage = "https://github.com/msfjarvis/clipboard-substitutor"
license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.82"
argv = "0.1.11"
copypasta = { version = "0.10.1", default-features = false, features = ["x11"] }
dirs = "6.0.0"
regex = "1.10.4"
serde = "1.0.200"
serde_derive = "1.0.200"
toml = "0.9.0"
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
